# cookiecutter-science

./: README.md  README_zh.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/config/: config.yaml
{{cookiecutter.project_slug}}/notebooks/: 00_draft_example.ipynb
{{cookiecutter.project_slug}}/reports/: .gitignore  Makefile  main.tex  si.tex
{{cookiecutter.project_slug}}/scripts/: backup.py  clean.py  config_loader.py  data_downloader.py  paths.py
{{cookiecutter.project_slug}}/src/plot/: plot_style.py
{{cookiecutter.project_slug}}/src/utils/: file_io.py  logger.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: cli.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/data/: clean_data.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/plot/: plot_style.py
