[build-system]
requires = [
    "setuptools", 
    "setuptools_scm[toml]",
    "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.project_slug}}"
description = "{{cookiecutter.project_short_description}}"
authors = [
    {name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"}
]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "jupyterlab",
    "matplotlib",
    "uv",
    "typer",
    "SciencePlots"
]
classifiers = ["Private :: Do Not Upload"]

[project.optional-dependencies]
dev = [
    "ruff",   # for linting
    "pytest"  # for testing
]

[tool.setuptools]
packages = ["{{cookiecutter.project_slug}}"]

[tool.setuptools_scm] # use git tag as the version number
version_scheme = "post-release"
local_scheme = "no-local-version"